# probbie

./: .gitignore  LICENSE  README.md  prob.cabal  stack.yaml
src/Numeric/Probability/: Monad.hs
src/Numeric/Probability/Monad/: Toys.hs
