name:                prob
version:             0.1.0.0
synopsis:            DSL for defining and inferring parameters of probability models
license:             ISC
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.Probability.Monad
  build-depends:       base >=4.8 && <5.0
                      ,free
                      ,lognum
                      ,mwc-random
                      ,primitive
                      ,vector
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

